# battaglia_navale

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  log.txt  log_player.txt  log_player1.txt  log_player2.txt  log_player3.txt  read_me.txt
include/: AttackGrid.h  Battleship.h  Coord.h  DefenceGrid.h  ExplorationSubmarine.h  Functions.h  Game.h  GamePc.h  GamePlayer.h  Grid.h  HelpShip.h  Replay.h  Ship.h
src/: AttackGrid.cpp  Battleship.cpp  Coord.cpp  DefenceGrid.cpp  ExplorationSubmarine.cpp  Functions.cpp  Game.cpp  GamePc.cpp  GamePlayer.cpp  Grid.cpp  HelpShip.cpp  Replay.cpp  Ship.cpp  log.txt  log_pc.txt  log_player.txt  main-replay.cpp  main.cpp  ouput.txt  output.txt  output_replay_pl.txt
